fixed letter spacing in nav

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,6 +36,7 @@
     font-size: 42px !important;
     line-height: 42px !important;
     color: #1db818 !important;
+    letter-spacing: 25px;
 }
 
 @media only screen and (max-width: 400) {
